# Bangumi2QBtFeed

./: .editorconfig  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: kansou.rs  main.rs  time.rs
src/components/: App.tsx  DataTable.tsx  Info.tsx
src/components/base/: Select.tsx
src/features/: index.ts
src/features/LeftPanel/: index.ts
src/features/LeftPanel/components/: LeftPanel.tsx
src/hooks/: useDarkMode.ts
src/pages/: index.tsx  info.tsx
src/store/: bangumi.ts  theme.ts
src/styles/: App.scss  index.scss
